Update java-9-modularity.md